# dual_momentum

./: .env.example  .gitignore  CLAUDE.md  PROMPT.md  README.md  WIGGUM.md  pyproject.toml
src/dm/: __init__.py  cli.py  compare.py  data.py  returns.py
tests/: conftest.py  test_cli.py  test_compare.py  test_data.py  test_integration.py  test_returns.py
