[project]
name = "dm"
version = "0.1.0"
description = "Dual momentum strategy calculator comparing VOO/VXUS returns against treasury rates"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Jason Olinger", email = "jbolinge@hotmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "fredapi>=0.5.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "yfinance>=1.0",
]

[project.scripts]
dm = "dm.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests that call real external APIs (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dm"]
